# BioScope-NLP

./: .env.example  .gitignore  README.md  pyproject.toml
handoff/: stream.cursor
schemas/: bioscope.shared.contracts.json
scripts/: load-env.sh  replay-bioscope-out.sh  run-local.sh  run-watch.sh
src/bioscope_workers/: __init__.py  __main__.py  cli.py  config.py
src/bioscope_workers/contracts/: __init__.py  enrichment.py  envelope.py  schema.py
src/bioscope_workers/runtime/: __init__.py  file_watch.py  state.py  worker.py
src/bioscope_workers/services/: __init__.py  alerts.py  classifier.py  entity.py
src/bioscope_workers/transports/: __init__.py  jsonl.py  kafka.py
tests/: test_config.py  test_contracts.py  test_enrichment_contract.py  test_file_watch.py  test_kafka_integration.py  test_pipeline.py  test_replay_equivalence.py  test_runtime_settings.py
